--- a/src/main/resources/templates/item/itemDtl.html
+++ b/src/main/resources/templates/item/itemDtl.html
@@ -44,10 +44,13 @@
                     console.log(result);
                     var naver = result;
                     var priceresult = ""
+                    var nslink = ""
                     $.each(naver, function(i){
                         priceresult =naver[i].lprice;
+                        nslink = naver[i].slink;
                     });
                     $("#naverprice").append(priceresult);
+                    $("#naverlink").click(function (){ $(location).attr("href", nslink) });
 
                 },
                 error : function(error){
@@ -228,7 +231,8 @@
             <hr class="my-2">
             <div class="text-right" mgt-20>
                 <h5>네이버 쇼핑 최저가</h5>
-                <span id="naverprice"></span>원
+                <h3><span id="naverprice" class="font-weight-bold"></span>원</h3>
+                <button id = "naverlink" type="button" class="btn primary btn-primary" > 네이버 쇼핑몰로 사러가기 </button>
 
             </div>
 
@@ -236,6 +240,7 @@
 
         </div>
     </div>
+
 
     <div class="jumbotron jumbotron-fluid mgt-30">
         <div class="container">
